// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is a suggestion 1`] = `
<div
  aria-describedby={null}
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeft": "5px solid #1b7729",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "padding": "9px",
      }
    }
  >
    <span
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <span
        className={undefined}
        onClick={[Function]}
        style={
          Object {
            "flexGrow": 2,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "width": "max-content",
          }
        }
      >
        hello
      </span>
      <svg
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "color": "#646464",
            "display": "inline-block",
            "fill": "currentColor",
            "height": 20,
            "marginLeft": 5,
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "0.1s",
            "userSelect": "none",
            "verticalAlign": "middle",
            "width": 20,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
        />
      </svg>
    </span>
    <sup
      style={
        Object {
          "opacity": "0.8",
          "padding": "2px 0px 0px",
          "top": "0px",
        }
      }
    >
      1
    </sup>
  </div>
</div>
`;

exports[`occurs multiple times 1`] = `
<div
  aria-describedby={null}
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeft": "5px solid #44C6FF",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "padding": "9px",
      }
    }
  >
    <span
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <span
        className={undefined}
        onClick={[Function]}
        style={
          Object {
            "flexGrow": 2,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "width": "max-content",
          }
        }
      >
        hello
      </span>
    </span>
    <sup
      style={
        Object {
          "opacity": "0.8",
          "padding": "2px 0px 0px",
          "top": "0px",
        }
      }
    >
      1
    </sup>
  </div>
</div>
`;

exports[`occurs once 1`] = `
<div
  aria-describedby={null}
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderLeft": "5px solid #44C6FF",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "padding": "9px",
      }
    }
  >
    <span
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <span
        className={undefined}
        onClick={[Function]}
        style={
          Object {
            "flexGrow": 2,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "width": "max-content",
          }
        }
      >
        hello
      </span>
    </span>
  </div>
</div>
`;

exports[`renders rtl 1`] = `
<div
  aria-describedby={null}
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  title={null}
>
  <div
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRight": "5px solid #44C6FF",
        "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset",
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "padding": "9px",
      }
    }
  >
    <span
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <span
        className={undefined}
        onClick={[Function]}
        style={
          Object {
            "flexGrow": 2,
            "overflow": "hidden",
            "textOverflow": "ellipsis",
            "width": "max-content",
          }
        }
      >
        hello
      </span>
    </span>
  </div>
</div>
`;
